fix: fix features section overflow

--- a/src/scss/layout/_features.scss
+++ b/src/scss/layout/_features.scss
@@ -1,6 +1,5 @@
 .features-wrap {
 	max-width: 540px;
-	max-height: 315px;
 	margin: 0 auto;
 }
 
